<resources>
    <string name="app_name">intentsproj</string>
    <string name="num1">Number 1:</string>
    <string name="num2">Number 2:</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="ok">OK</string>
    <string name="et_n1" />
    <string name="et_n2" />
    <string name="tv_answer" />
    <string name="et_toast">Opening Calculator</string>
</resources>