<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".secondActivity">

    <TextView
        android:id="@+id/num1"
        android:layout_width="128dp"
        android:layout_height="37dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="48dp"
        android:text="@string/num1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/num2"
        android:layout_width="124dp"
        android:layout_height="39dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="52dp"
        android:text="@string/num2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <EditText
        android:id="@+id/et_n2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/et_n2"
        app:layout_constraintBaseline_toBaselineOf="@+id/num2"
        app:layout_constraintStart_toEndOf="@+id/num2" />

    <EditText
        android:id="@+id/et_n1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/et_n1"
        app:layout_constraintBaseline_toBaselineOf="@+id/num1"
        app:layout_constraintStart_toEndOf="@+id/num1" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="68dp"
        android:onClick="addNumbers"
        android:text="@string/add"
        android:textSize="20sp"
        app:backgroundTint="#7A7878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_answer" />

    <Button
        android:id="@+id/sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:onClick="subtractNumbers"
        android:text="@string/sub"
        android:textSize="20sp"
        app:backgroundTint="#7A7878"
        app:layout_constraintBaseline_toBaselineOf="@+id/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toEndOf="@+id/add" />

    <Button
        android:id="@+id/mul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="68dp"
        android:onClick="multiplyNumbers"
        android:text="@string/mul"
        android:textSize="20sp"
        app:backgroundTint="#7A7878"
        app:layout_constraintEnd_toStartOf="@+id/div"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <Button
        android:id="@+id/div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:onClick="divideNumbers"
        android:text="@string/div"
        android:textSize="20sp"
        app:backgroundTint="#7A7878"
        app:layout_constraintBaseline_toBaselineOf="@+id/mul"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_answer"
        android:layout_width="224dp"
        android:layout_height="100dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="68dp"
        android:text="@string/tv_answer"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num2" />
</androidx.constraintlayout.widget.ConstraintLayout>